Fix XSS vulnerability injecting JSON into Handlebars templates
Replace our own JsonHelper (which probably shouldn't have used SafeString)
with Handlebars' own Jackson2 integration and make sure to use the
escapeHtml flag to prevent XSS.

Change-Id: Icdf0378b192c9d56281e8c9751388f0e38302e84

--- a/oasis-webapp/src/main/java/oasis/web/Base.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/Base.html.hbs
@@ -15,7 +15,7 @@
 
   [[#if initData]]
     <script type="application/json" id="initial-data">
-      [[json initData]]
+      [[json initData escapeHTML=true]]
     </script>
   [[/if]]
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
