--- a/oasis-webapp/src/main/java/oasis/web/Base.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/Base.html.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app">
+<html>
 <head>
   <meta charset="utf-8">
   [[#block "title"]]
@@ -11,23 +11,6 @@
 </head>
 <body>
   [[#block "content"]]
-  [[/block]]
-
-  [[#if initData]]
-    <script type="application/json" id="initial-data">
-      [[json initData escapeHTML=true]]
-    </script>
-  [[/if]]
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
-  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-  <script src="/js/vendor/lodash.min.js"></script>
-  <script src="/js/main.js"></script>
-  [[#block "controllers"]]
-    [[! Will be used by sub templates in order to add controllers ]]
-  [[/block]]
-  [[#block "directives"]]
-    [[! Will be used by sub templates in order to add directives ]]
   [[/block]]
 </body>
 </html>
